<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <!--logout button-->
    <Button
            android:id="@+id/logout_button"
            android:text="@string/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <!--placeholder for NoConnection-->
    <FrameLayout
            android:id="@+id/frag_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="16dp"
            tools:layout_editor_absoluteX="0dp"/>

    <!--how to play-->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/play_rules"
            android:text="@string/play_rules"
            app:layout_constraintTop_toBottomOf="@id/logout_button"
    />

    <!--record view-->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/win"
            android:text="@string/win"
            app:layout_constraintTop_toBottomOf="@+id/play_rules"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lose"
            android:text="@string/lose"
            app:layout_constraintTop_toBottomOf="@+id/win"
    />


    <!--Dealer-->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dealer"
            android:text="@string/dealer"
            app:layout_constraintTop_toBottomOf="@+id/lose"
    />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dealerCards"
            app:layout_constraintTop_toBottomOf="@+id/dealer"
    >
            <ImageView
                    android:id="@+id/dealerCard1"
                    android:layout_width="75dp"
                    android:layout_height="100dp"
            />
            <ImageView
                    android:id="@+id/dealerCard2"
                    android:layout_width="75dp"
                    android:layout_height="100dp"
            />
            <ImageView
                    android:id="@+id/dealerCard3"
                    android:layout_width="75dp"
                    android:layout_height="100dp"
            />
            <ImageView
                    android:id="@+id/dealerCard4"
                    android:layout_width="75dp"
                    android:layout_height="100dp"
            />
            <ImageView
                    android:id="@+id/dealerCard5"
                    android:layout_width="75dp"
                    android:layout_height="100dp"
            />
    </LinearLayout>


    <!--player-->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/player"
            android:text="@string/player"
            app:layout_constraintTop_toBottomOf="@+id/dealerCards"
    />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/playerCards"
            app:layout_constraintTop_toBottomOf="@+id/player"
    >
        <ImageView
                android:id="@+id/playerCard1"
                android:layout_width="75dp"
                android:layout_height="100dp"
        />
        <ImageView
                android:id="@+id/playerCard2"
                android:layout_width="75dp"
                android:layout_height="100dp"
        />
        <ImageView
                android:id="@+id/playerCard3"
                android:layout_width="75dp"
                android:layout_height="100dp"
        />
        <ImageView
                android:id="@+id/playerCard4"
                android:layout_width="75dp"
                android:layout_height="100dp"
        />
        <ImageView
                android:id="@+id/playerCard5"
                android:layout_width="75dp"
                android:layout_height="100dp"
        />
    </LinearLayout>
    <TextView
            android:id="@+id/playerScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score"
            app:layout_constraintTop_toBottomOf="@+id/playerCards"
    />

    <!--result-->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/result"
            android:text=""
            app:layout_constraintTop_toBottomOf="@id/playerScore"
    />

    <!--leaderboard button-->
    <Button
            android:id="@+id/leaderboard_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leaderboard_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
    />

    <!--new game-->
    <Button
    android:id="@+id/new_game_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/newgame_button"
    app:layout_constraintBottom_toTopOf="@id/leaderboard_button"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    />

</android.support.constraint.ConstraintLayout>